
    *******************************************************
    Warnings, errors, malfunctions, code patches, suggestions
    Support: http://darkbot.sourceforge.net
    (order is reverse-chronologic)
    ******************************************************* 
     

Darkbot 8rc4: May 13, 2009
	- Fixed DIE, NICK, METAR, PART, RANDQ, RANDQ2, RDB, STATS, TAR, 
          TELL commands crashing with no args. I made a small change to 
          the initial command parsing function which rendered some things 
	  improper and made many functions crash because they were no 
	  longer receiving the arguments they expected before the change.
	- Fixed CHAR_INVOKE'd commands to do nothing if given too many
	  arguments. 
	- INFO2 command now outputs correctly in privmsg.
	- Added the "You must specify a search string" message to
	  RANDQ and RANDQ commands with no arguments.
	- Sleep command now checks for too many args, this is part
	  of the command structure now, so more commands are to follow
	  probably.
	- MSG_INVOKE'd commands now also check for too many arguments.
	- Commands with less arguments than expected now show
	  help messages again.
	- Fixed crash error on ADDUSER command.
	- Fixed retarded error in MEM command where I was trying
          to change the contents of a const variable.
	- Made OS, MEM, CMDCHAR, and CPU commands check for too many arguments.
	- Fixed OS command on Windows.
	- Fixed chanserv_random_stuff.
	- Fixed alarmclock function.
	- Fixed permbans command not outputting help for null
	  input. More to come.
 	- Fixed several commands that crashed not checking for
	  a null argument array. The fix I did looks sort of 
 	  retarded, but I found if i didn't check args[0] and args
	  both, it would crash on different command types.
	  Go figure. This fix works and I'll work on bettering it.
Darkbot 8rc4: April 30, 2009
	- Fixed extensions.m4 file from discriminating against
	  me using a newer version of automake than 1.9.6, and